worked on some routes and json files.

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -38,17 +38,13 @@
                                     </div>
 
                                     <div class="name_holder">
-                                        <h3>Alan <span>Michaelis</span></h3>
+                                        <h3>Nicholas <span>Wease</span></h3>
                                     </div>
 
                                     <div class="text_typing">
                                         <p>I'm a <span class="arlo_tm_animation_text_word"></span></p>
                                     </div>
                                 </div>
-                            </div>
-
-                            <div class="arlo_tm_arrow_wrap bounce anchor">
-                                <a href="#about"><i class="xcon-angle-double-down"></i></a>
                             </div>
                         </div>
                     </div>
@@ -60,7 +56,7 @@
                         <div class="container">
                             <div class="arlo_tm_title_holder">
                                 <h3>About Me</h3>
-                                <span>Main informations about me</span>
+<!--                                <span>about me</span>-->
                             </div>
 
                             <div class="arlo_tm_about_wrap">
@@ -81,37 +77,37 @@
 
                                     <div class="rightbox">
                                         <div class="arlo_tm_mini_title_holder">
-                                            <h4>I'm Alan Michaelis and <span class="arlo_tm_animation_text_word"></span></h4>
+                                            <h4>I'm Nicholas Wease and <span class="arlo_tm_animation_text_word"></span></h4>
                                         </div>
 
                                         <div class="definition">
-                                            <p>Hi! My name is <strong>Alan Michaelis</strong>. I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration to concept and execution, but I find the most satisfaction in seeing the finished product do everything for you that it was created to do.</p>
+                                            <p>Hi! My name is <strong>Nicholas Wease</strong>. I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration to concept and execution, but I find the most satisfaction in seeing the finished product do everything for you that it was created to do.</p>
                                         </div>
 
                                         <div class="about_short_contact_wrap">
                                             <ul>
                                                 <li>
-                                                    <span><label>Birthday:</label> 01.07.1990</span>
+                                                    <span><label>Birthday:</label> 11.13.1974</span>
                                                 </li>
 
                                                 <li>
-                                                    <span><label>Age:</label> 28</span>
+                                                    <span><label>Age:</label> 44</span>
                                                 </li>
 
                                                 <li>
-                                                    <span><label>City:</label> New York, USA</span>
+                                                    <span><label>City:</label>s-Hertogenbosch, Netherlands</span>
                                                 </li>
 
                                                 <li>
-                                                    <span><label>Interests:</label> Soccer, UFC</span>
+                                                    <span><label>Interests:</label> Football, Politics</span>
                                                 </li>
 
                                                 <li>
-                                                    <span><label>Study:</label> Chicago University</span>
+                                                    <span><label>Study:</label> Eastern Michigan University</span>
                                                 </li>
 
                                                 <li>
-                                                    <span><label>Degree:</label> Master</span>
+                                                    <span><label>Degree:</label> Bachelors</span>
                                                 </li>
 
                                                 <li>
@@ -123,7 +119,7 @@
                                                 </li>
 
                                                 <li>
-                                                    <span><label>Phone:</label> <a href="#">+77 022 177 05 05</a></span>
+                                                    <span><label>Phone:</label> <a href="#">+31681326798</a></span>
                                                 </li>
 
                                                 <li>
@@ -157,7 +153,7 @@
                             <div class="inner_wrap">
                                 <div class="leftbox">
                                     <div class="arlo_tm_mini_title_holder">
-                                        <h4>Some About my Abilities</h4>
+                                        <h4>Something More About my Abilities</h4>
                                     </div>
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since. Lorem Ipsum has been the industry. Lorem Ipsum has been the industry's standard dummy text since. Lorem Ipsum is simply.</p>
                                 </div>
@@ -486,7 +482,7 @@
                                 <li>
                                     <div class="inner arlo_tm_minibox">
                                         <h3><span><span class="arlo_tm_counter" data-from="0" data-to="777" data-speed="3000">0</span>+</span></h3>
-                                        <span>My Awwwards</span>
+                                        <span>My Awards</span>
                                     </div>
                                 </li>
                             </ul>
@@ -530,7 +526,6 @@
                                                         <li><a href="#">Facebook</a></li>
                                                         <li><a href="#">Twitter</a></li>
                                                         <li><a href="#">Linkedin</a></li>
-                                                        <li><a href="#">Behance</a></li>
                                                     </ul>
                                                 </div>
                                                 <div class="read_more">
@@ -565,7 +560,6 @@
                                                         <li><a href="#">Facebook</a></li>
                                                         <li><a href="#">Twitter</a></li>
                                                         <li><a href="#">Linkedin</a></li>
-                                                        <li><a href="#">Behance</a></li>
                                                     </ul>
                                                 </div>
                                                 <div class="read_more">
@@ -584,7 +578,7 @@
                                             </div>
                                             <div class="definitions_wrap">
                                                 <div class="date_wrap">
-                                                    <p>April 12, 2018 <a href="index.html">Branding</a></p>
+                                                    <p>april 2, 2019 <a href="index.html">Branding</a></p>
                                                 </div>
                                                 <div class="title_holder">
                                                     <h3><a href="index.html">Innovative Ways to Increase Brand</a></h3>
@@ -600,7 +594,6 @@
                                                         <li><a href="#">Facebook</a></li>
                                                         <li><a href="#">Twitter</a></li>
                                                         <li><a href="#">Linkedin</a></li>
-                                                        <li><a href="#">Behance</a></li>
                                                     </ul>
                                                 </div>
                                                 <div class="read_more">
