--- a/views/home.mustache
+++ b/views/home.mustache
@@ -34,15 +34,15 @@
                             <div class="content hero">
                                 <div class="inner_content">
                                     <div class="image_wrap">
-                                        <img src="img/hero/new.jpg" alt="" />
+                                        <img src="{{page.profile.avatar}}" alt="" />
                                     </div>
 
                                     <div class="name_holder">
-                                        <h3>Nicholas <span>Wease</span></h3>
+                                        <h3>{{page.profile.firstName}} <span>{{page.profile.lastName}}</span></h3>
                                     </div>
 
                                     <div class="text_typing">
-                                        <p>I'm a <span class="arlo_tm_animation_text_word"></span></p>
+                                        <p>{{page.profile.caption}}</p>
                                     </div>
                                 </div>
                             </div>
