Finished with background.

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -28,13 +28,12 @@
                         <div class="arlo_tm_universal_box_wrap">
                             <div class="bg_wrap">
                                 <div class="overlay_image hero jarallax" data-speed="0.1"></div>
-                                <div class="overlay_color hero"></div>
+                                <div class="overlay_color hero" style="background-image: url('https://images.unsplash.com/photo-1464547304833-02f72e3835ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1920&q=1080')"></div>
                             </div>
-
                             <div class="content hero">
                                 <div class="inner_content">
                                     <div class="image_wrap">
-                                        <img src="{{page.profile.avatar}}" alt="" />
+                                        <img src="{{page.profile.avatar}}" alt="me" />
                                     </div>
 
                                     <div class="name_holder">
