--- a/views/partials/head.mustache
+++ b/views/partials/head.mustache
@@ -1,8 +1,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="description" content="Name of your web site">
-<meta name="author" content="Marketify">
+<meta name="description" content="Developer Nick">
+<meta name="author" content="Nicholas Wease">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>Developer Nick</title>
+<title>{{global.title}}</title>
 
 <!-- STYLES -->
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
